# codecov-umbrella

./: .dockerignore  .envrc  .gitignore  .gitmodules  .pre-commit-config.yaml  Makefile  README.md  ci-tests.docker-compose.yml  codecov.yml  docker-compose.yml  pyproject.toml  requirements.in  requirements.txt  ruff.toml
.github/: CODEOWNERS  (+2 more)
apps/worker/: Makefile  README.md  app.py  celery_config.py  celery_task_router.py  conftest.py  docker-compose.yml  main.py  manage.py  migrate_timeseries.py  pyproject.toml  pytest.ini  worker.sh
apps/worker/database/: base.py  engine.py  events.py  utils.py
apps/worker/database/models/: core.py  labelanalysis.py
apps/worker/django_scaffold/: settings_prod.py  settings_staging.py  settings_test.py
apps/worker/generated_proto/testrun/: ta_testrun_pb2.py
apps/worker/helpers/: backfills.py  clock.py  components.py  github_installation.py  log_context.py  logging_config.py  match.py  notifier.py  pathmap.py  reports.py  sentry.py  string.py  token_refresh.py
apps/worker/helpers/checkpoint_logger/: __init__.py  prometheus.py
apps/worker/rollouts/: __init__.py
apps/worker/services/: activation.py  ai_pr_review.py  commit_status.py  comparison_utils.py  decoration.py  failure_normalizer.py  github.py  github_marketplace.py  license.py  lock_manager.py  owner.py  repository.py  seats.py  smtp.py  stripe.py  test_results.py  timeseries.py  urls.py
apps/worker/services/bundle_analysis/: comparison.py  report.py
apps/worker/services/cleanup/: cleanup.py  models.py  owner.py  pulls.py  regular.py  relations.py  repository.py  uploads.py  utils.py
apps/worker/services/comparison/: __init__.py  changes.py  types.py
apps/worker/services/notification/: __init__.py  commit_notifications.py
apps/worker/services/path_fixer/: __init__.py  fixpaths.py  user_path_fixes.py  user_path_includes.py
apps/worker/services/processing/: flake_processing.py  intermediate.py  merging.py  metrics.py  processing.py  state.py
apps/worker/services/report/: __init__.py  prometheus_metrics.py  raw_upload_processor.py  report_builder.py  report_processor.py  transplant.py
apps/worker/services/static_analysis/: __init__.py  single_file_analyzer.py
apps/worker/services/test_analytics/: ta_cache_rollups.py  ta_finish_upload.py  ta_metrics.py  ta_process_flakes.py  ta_processing.py  ta_processor.py  ta_timeseries.py
apps/worker/services/tests/: test_activation.py  test_ai_pr_review.py  test_billing.py  test_commit_status.py  test_decoration.py  test_failure_normalizer.py  test_github.py  test_license.py  test_owner_service.py  test_report.py  test_repository_service.py  test_seats.py  test_smtp.py  test_template.py  test_test_results.py  test_timeseries.py  test_urls.py
apps/worker/services/yaml/: __init__.py  fetcher.py  parser.py  reader.py
apps/worker/ta_storage/: pg.py
apps/worker/tasks/: __init__.py  activate_account_user.py  ai_pr_review.py  backfill_existing_gh_app_installations.py  backfill_owners_without_gh_app_installations.py  base.py  brolly_stats_rollup.py  bundle_analysis_notify.py  bundle_analysis_processor.py  bundle_analysis_save_measurements.py  cache_rollup_cron_task.py  cache_test_rollups.py  cache_test_rollups_redis.py  commit_update.py  compute_comparison.py  compute_component_comparison.py  crontasks.py  delete_owner.py  flare_cleanup.py  flush_repo.py  github_app_webhooks_check.py  github_marketplace.py  health_check.py  http_request.py  label_analysis.py  manual_trigger.py  new_user_activated.py  notify.py  notify_error.py  partition_management.py  plan_manager_task.py  preprocess_upload.py  process_flakes.py  save_commit_measurements.py  send_email.py  static_analysis_suite_check.py  status_set_error.py  status_set_pending.py  sync_pull.py  sync_repo_languages.py  (+15 more)
apps/worker/tasks/tests/: utils.py
apps/worker/test_utils/: base.py
apps/worker/tests/: test_debug.py
apps/worker/tests/unit/: test_main.py  test_task_router.py
libs/shared/: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
libs/shared/docker/: Dockerfile  test.yml
libs/shared/shared/: celery_config.py  celery_router.py  testutils.py
libs/shared/shared/analytics_tracking/: __init__.py  events.py  manager.py
libs/shared/shared/api_archive/: archive.py
libs/shared/shared/bots/: __init__.py  github_apps.py  owner_bots.py  public_bots.py  repo_bots.py  types.py
libs/shared/shared/bundle_analysis/: comparison.py  models.py  parser.py  report.py  storage.py  utils.py
libs/shared/shared/components/: __init__.py
libs/shared/shared/config/: __init__.py
libs/shared/shared/django_apps/: db.py  db_settings.py  manage.py  settings_test.py
libs/shared/shared/encryption/: selector.py  standard.py
libs/shared/shared/environment/: environment.py
libs/shared/shared/github/: __init__.py
libs/shared/shared/helpers/: cache.py  flag.py  numeric.py
libs/shared/shared/license/: __init__.py
libs/shared/shared/plan/: constants.py  service.py
libs/shared/shared/rate_limits/: __init__.py
libs/shared/shared/reports/: api_report_service.py  carryforward.py  diff.py  filtered.py  readonly.py  reportfile.py  resources.py  serde.py  test_utils.py  totals.py  types.py
libs/shared/shared/rollouts/: __init__.py  features.py
libs/shared/shared/self_hosted/: service.py
libs/shared/shared/storage/: memory.py  minio.py
libs/shared/shared/torngit/: base.py  bitbucket.py  bitbucket_server.py  github.py  gitlab.py  status.py
libs/shared/shared/typings/: oauth_token_types.py  torngit.py
libs/shared/shared/upload/: constants.py
libs/shared/shared/utils/: enums.py  flare.py  match.py  merge.py  pydantic_serializer.py  sentry.py  sessions.py  totals.py  urls.py
libs/shared/shared/validation/: helpers.py  install.py  types.py
libs/shared/shared/yaml/: fetcher.py  user_yaml.py  validation.py
libs/shared/tests/: base.py  conftest.py  helper.py
libs/shared/tests/integration/: test_bitbucket.py  test_bitbucket_server.py  test_bots.py  test_github.py  test_gitlab.py  test_report.py  test_report_file.py
(+907 files in other folders)
