[project]
name = "umbrella"
version = "0.1.0"
requires-python = ">=3.13"

[tool.uv]
default-groups = ["prod", "dev"]
required-version = ">=0.7.5"

[tool.uv.sources]
timestring = { git = "https://github.com/codecov/timestring", rev = "d37ceacc5954dff3b5bd2f887936a98a668dda42" }
test-results-parser = { git = "https://github.com/codecov/test-results-parser", rev = "accbb7f63cc973ee9809b181a5cf67f1f8f13ecd" }
shared = { workspace = true }                                                                                                      # TODO remove after repo-root migration

[tool.uv.workspace]
members = ["libs/shared"] # TODO remove after repo-root migration

[dependency-groups]
shared = [
    "amplitude-analytics>=1.1.4",
    "cachetools>=4.1.1",
    "celery>=5.3.6",
    "cerberus>=1.3.5",
    "codecov-ribs>=0.1.18",
    "colour>=0.1.5",
    "cryptography>=43.0.1",
    "django-better-admin-arrayfield>=1.4.2",
    "django-model-utils>=4.5.1",
    "django-postgres-extra>=2.0.8",
    "django-prometheus>=2.3.1",
    "django>=4.2.17",
    "google-auth>=2.21.1",
    "google-cloud-pubsub>=2.27.1",
    "httpx>=0.23.1",
    "ijson>=3.2.3",
    "minio>=7.2.15",
    "mmh3>=5.0.1",
    "msgpack>=1.1.0",
    "multidict>=6.1.0",
    "oauthlib>=3.1.2",
    "orjson>=3.10.11",
    "polars>=1.12.0",
    "prometheus-client>=0.17.1",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.10.4",
    "pyjwt>=2.8.0,<2.10.0",
    "pyparsing>=2.4.7",
    "python-dateutil>=2.9.0.post0",
    "python-json-logger>=2.0.7",
    "python-redis-lock>=4.0.0",
    "redis>=4.4.4",
    "regex>=2023.12.25",
    "requests>=2.32.3",
    "sentry-sdk>=2.29.1",
    "sentry-sdk[celery]>=2.29.1",
    "shared",                                # TODO: remove after repo-root migration
    "sqlalchemy<2",
    "stripe>=11.4.1",
    "urllib3==1.26.20",
]

codecov-api = [
    "aiodataloader>=0.4.0",
    "ariadne-django>=0.3.0",
    "ariadne>=0.23.0",
    "certifi>=2024.7.4",
    "django-autocomplete-light>=3.11.0",
    "django-cors-headers>=3.7.0",
    "django-csp>=3.8.0",
    "django-cursor-pagination>=0.3.0",
    "django-filter>=2.4.0",
    "djangorestframework>=3.15.2",
    "drf-spectacular-sidecar>=2023.3.1",
    "drf-spectacular>=0.26.2",
    "gunicorn>=22.0.0",
    "idna>=3.7",
    "simplejson>=3.17.2",
    "starlette>=0.40.0",
    "whitenoise>=5.2.0",
    { include-group = "shared" },
]

worker = [
    "asgiref>=3.7.2",
    "click>=8.1.7",
    "jinja2>=3.1.5",
    "lxml>=5.3.0",
    "openai>=1.2.4",
    "pyyaml>=6.0.1",
    "sqlalchemy<2",
    "sqlparse>=0.5.0",
    "statsd>=3.3.0",
    "test-results-parser",
    "timestring",
    "zstandard>=0.23.0",
    { include-group = "shared" },
]

dev = [
    # Workspace dev-dependencies
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "ruff>=0.12.0",
    # Test runtime dependencies
    "coverage>=7.8.0",
    "factory-boy>=3.3.3",
    "fakeredis>=2.29.0",
    "freezegun>=1.5.1",
    "mock>=5.2.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-celery>=1.2.0",
    "pytest-codspeed>=3.2.0",
    "pytest-cov>=6.1.1",
    "pytest-django>=4.11.1",
    "pytest-insta>=0.3.0",
    "pytest-mock>=3.14.0",
    "pytest-sqlalchemy>=0.3.0",
    "respx>=0.22.0",
    "sqlalchemy-utils>=0.41.2",
    "types-mock>=5.2.0.20250516",
    "types-requests<2.31.0.7", # this is pinned to an older version because of `urllib3` dependency
    "vcrpy>=7.0.0",
    "django-stubs>=5.2.1",
    "djangorestframework-stubs>=3.16.0",
    "pytest-freezer>=0.4.9",
]

prod = [{ include-group = "codecov-api" }, { include-group = "worker" }]
