[project]
name = "worker"
version = "0.1.0"
description = "The codecov worker"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asgiref>=3.7.2",
    "analytics-python==1.3.0b1",
    "celery>=5.3.6",
    "click>=8.1.7",
    "codecov-ribs==0.1.18",
    "django>=4.2.17",
    "django-postgres-extra>=2.0.8",
    "google-cloud-pubsub>=2.27.1",
    "httpx>0.23.1",
    "jinja2>=3.1.5",
    "lxml>=5.3.0",
    "mmh3>=5.0.1",
    "multidict>=6.1.0",
    "openai>=1.2.4",
    "orjson>=3.10.11",
    "polars==1.12.0",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.9.0",
    "pyjwt>=2.4.0",
    "python-dateutil>=2.9.0.post0",
    "python-json-logger>=0.1.11",
    "python-redis-lock>=4.0.0",
    "pyyaml>=6.0.1",
    "redis>=4.4.4",
    "regex>=2023.12.25",
    "requests>=2.32.0",
    "sentry-sdk>=2.29.1",
    "shared",
    "sqlalchemy<2",
    "sqlparse>=0.5.0",
    "statsd>=3.3.0",
    "stripe>=11.4.1",
    "test-results-parser",
    "timestring",
    "zstandard>=0.23.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[tool.uv]
required-version = ">=0.7.5"
dev-dependencies = [
    "coverage>=7.8.0",
    "factory-boy>=3.3.3",
    "mock>=5.2.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-celery>=1.2.0",
    "pytest-cov>=6.1.1",
    "pytest-django>=4.11.1",
    "pytest-freezegun>=0.4.2",
    "pytest-insta>=0.3.0",
    "pytest-mock>=3.14.0",
    "pytest-sqlalchemy>=0.3.0",
    "respx>=0.22.0",
    "sqlalchemy-utils>=0.41.2",
    "vcrpy>=7.0.0",
]

[tool.uv.sources]
timestring = { git = "https://github.com/codecov/timestring", rev = "d37ceacc5954dff3b5bd2f887936a98a668dda42" }
test-results-parser = { git = "https://github.com/codecov/test-results-parser", rev = "f4f44a3a144471c2b304ed1a6d03945a6d00bd84" }
shared = { path = "../../libs/shared" }
