[project]
name = "shared"
version = "0.1.0"
description = "Shared code used in codecov API and worker"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cachetools>=4.1.1",
    "cerberus>=1.3.5",
    "codecov-ribs>=0.1.18",
    "colour>=0.1.5",
    "cryptography>=43.0.1",
    "django-better-admin-arrayfield>=1.4.2",
    "django-model-utils>=4.5.1",
    "django-postgres-extra>=2.0.8",
    "django-prometheus>=2.3.1",
    "django>=4.2.17",
    "google-auth>=2.21.0",
    "google-cloud-pubsub>=2.18.4",
    "httpx>=0.23.0",
    "ijson>=3.2.3",
    "minio>=7.1.13",
    "mmh3>=4.0.1",
    "oauthlib>=3.1.0",
    "orjson>=3.10.9",
    "prometheus-client>=0.17.1",
    "pyjwt>=2.8.0",
    "pyparsing>=2.4.7",
    "python-redis-lock>=4.0.0",
    "pyyaml>=6.0.1",
    "redis>=4.4.4",
    "requests>=2.32.3",
    "sentry-sdk>=2.13.0",
    "sqlalchemy<2",
    "zstandard>=0.23.0",
    "pydantic>=2.10.4",
    "amplitude-analytics>=1.1.4",
    "msgpack>=1.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
required-version = ">=0.7.5"
dev-dependencies = [
    "factory-boy>=3.3.3",
    "freezegun>=1.5.1",
    "mock>=5.2.0",
    "psycopg2-binary>=2.9.10",
    "pytest-asyncio>=0.26.0",
    "pytest-codspeed>=3.2.0",
    "pytest-cov>=6.1.1",
    "pytest-django>=4.11.1",
    "pytest-mock>=3.14.0",
    "pytest>=8.3.5",
    "respx>=0.22.0",
    "types-mock>=5.2.0.20250516",
    "vcrpy>=7.0.0",
    "types-requests<2.31.0.7",    # this is pinned to an older version because of `urllib3` dependency
]
